<resources>
    <string name="app_name">Bank</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <string name="login_error_incorrect_user">Informe seu e-mail ou CPF</string>
    <string name="login_error_incorrect_password">Informe uma senha compatível</string>
    <string name="login_error">Login e/ou senha incorretos</string>
    <string name="empty" translatable="false" />
    <string name="account">conta</string>
    <string name="balance">saldo</string>
    <string name="recent">Recentes</string>
    <string name="statement_list_error">Não foi possível listar as últimas transações</string>
</resources>